@@ -3,6 +3,8 @@
      desktop icons (bug 648087)
    * Improved robustness for missing theme/icon
      directories (bug 648735)
+   * Fix shell theme installation for themes found in the wild
+   * Improve shell theme selection
 
 3.0.2
    * Really tweak window theme - both the fallback and the
